--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.487.0",
+    "mapbox-gl": "^3.11.0",
     "next": "15.2.4",
+    "osmtogeojson": "^3.0.0-beta.5",
+    "overpass-ts": "^4.3.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-map-gl": "^8.0.2",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.1.0",
+    "terraformer": "^1.0.12",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
